--- a/style.css
+++ b/style.css
@@ -4,6 +4,27 @@
   box-sizing: border-box;
 }
 
+:root {
+  width: 100dvw;
+  height: 100dvh;
+}
+
 body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
   background-color: #dfe0d2;
+}
+
+img {
+  image-rendering: pixelated;
+}
+
+.center {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
