--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Schoolbell&display=swap");
+
 *,
 *::before,
 *::after {
@@ -16,19 +18,61 @@ body {
   overflow: hidden;
 
   background-color: #dfe0d2;
+  color: #6e6e56;
+  font-family: "Schoolbell", monospace;
 }
 
 img {
   image-rendering: pixelated;
 }
 
-.main {
-  width: min(60dvh, 60dvw);
-}
-
 .center {
   height: 100%;
+
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 5px;
+}
+
+.text-wrapper {
+  width: max-content;
+  height: max-content;
+  padding: 5px;
+  border-radius: 15px;
+  background-color: #dfe0d2;
+
+  /* temp */
+  font-size: 3rem;
+  line-height: 3rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.subtitle {
+  font-size: 2rem;
+  line-height: 2rem;
+
+  display: flex;
+  gap: 10px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #b2b0a1;
+}
+
+a:active {
+  color: #d2d1bf;
+}
+
+.main {
+  width: min(60dvh, 60dvw);
 }
