--- a/style.css
+++ b/style.css
@@ -85,6 +85,27 @@ a:active {
     padding: 15px;
     border-radius: 25px;
 
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+
+  .subtitle {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+
+    gap: 10px;
+  }
+}
+
+@media (width > 2100px) {
+  .center {
+    gap: 7px;
+  }
+
+  .text-wrapper {
+    padding: 15px;
+    border-radius: 25px;
+
     font-size: 6rem;
     line-height: 6rem;
   }
